--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <p>Stay Muddy Friends,</p>
     <p>-Doug</p>
 
-    <img style="margin:0 auto;display:block; width:75%;" src="./static/img/site/elChubra-min.jpg"/>
+    <img style="margin:0 auto;display:block; width:75%;" src="/static/img/site/elChubra-min.jpg"/>
 
     <br>
     <button class="accordionClose accordion-action">X</button>
@@ -98,21 +98,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="pirate4x4 tech" data-title="Tube Bending 101">
-
-              <div class="card">
-                <div class="card-id">generic build</div>
-                <div class="card-author">Rob Park</div>
-                <a href="./detail-page/tube-bending-101.html"> <div class="item-content">
-                <div class="card-title">Tube Bending 101</div>
-                <div class="card-description">pirate4x4 tech</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/recovery.jpg');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="Safe Recovery Technique">
+          <div style="background-image: url('/static/img/guides/recovery.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="" data-title="Safe Recovery Technique">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -126,21 +112,21 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-id="3" data-category="generic build" data-description="Subaru research and information website" data-title="Cars101.com">
+          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="2" data-category="generic build" data-description="pirate4x4 tech" data-title="Tube Bending 101">
 
               <div class="card">
                 <div class="card-id">generic build</div>
-                <div class="card-author">Joe Spitz</div>
-                <a href="./detail-page/cars101-com.html"> <div class="item-content">
-                <div class="card-title">Cars101.com</div>
-                <div class="card-description">Subaru research and information website</div>
+                <div class="card-author">Rob Park</div>
+                <a href="./detail-page/tube-bending-101.html"> <div class="item-content">
+                <div class="card-title">Tube Bending 101</div>
+                <div class="card-description">pirate4x4 tech</div>
                 </a>
                 </div>
               </div>
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="4" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -148,6 +134,20 @@
                 <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
                 <div class="card-title">DIY: Swing Away Bumper</div>
                 <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-id="4" data-category="generic build" data-description="Subaru research and information website" data-title="Cars101.com">
+
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">Joe Spitz</div>
+                <a href="./detail-page/cars101-com.html"> <div class="item-content">
+                <div class="card-title">Cars101.com</div>
+                <div class="card-description">Subaru research and information website</div>
                 </a>
                 </div>
               </div>
@@ -252,7 +252,21 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="12" data-category="ea82" data-description="" data-title="Ignition Module Testing">
+          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="12" data-category="generic build" data-description="" data-title="DIY Head Porting">
+
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">Tech Staff</div>
+                <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
+                <div class="card-title">DIY Head Porting</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="13" data-category="ea82" data-description="" data-title="Ignition Module Testing">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -266,7 +280,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="13" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="14" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -274,20 +288,6 @@
                 <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
                 <div class="card-title">How To Keep Your Subaru Alive</div>
                 <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="14" data-category="generic build" data-description="" data-title="DIY Head Porting">
-
-              <div class="card">
-                <div class="card-id">generic build</div>
-                <div class="card-author">Tech Staff</div>
-                <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
-                <div class="card-title">DIY Head Porting</div>
-                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -322,21 +322,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="17" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
-
-              <div class="card">
-                <div class="card-id">generic build</div>
-                <div class="card-author"></div>
-                <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
-                <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="18" data-category="generic build" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
+          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="17" data-category="generic build" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -344,6 +330,20 @@
                 <a href="./detail-page/chopsaw-tube-notching.html"> <div class="item-content">
                 <div class="card-title">Chopsaw Tube Notching</div>
                 <div class="card-description">BillaVista Offroad Tech</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="18" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author"></div>
+                <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
+                <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -379,7 +379,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-19.17</p>
+      <p >v1-08.12.18-29.50</p>
     </a>
   </footer>
 
