--- a/detail-page/bumper-cutting.html
+++ b/detail-page/bumper-cutting.html
@@ -28,7 +28,7 @@
   <meta property="og:title" content="  Bumper Cutting " />
   <meta property="og:description" content="   " />
 
-    <meta property="og:image" content="/overbiteProject.jpg" />
+    <meta property="og:image" content="/static/img/guides/overbiteProject.jpg" />
 
 
 </head>
@@ -49,7 +49,7 @@
     <p>Stay Muddy Friends,</p>
     <p>-Doug</p>
 
-    <img style="margin:0 auto;display:block; width:75%;" src="./static/img/site/elChubra-min.jpg"/>
+    <img style="margin:0 auto;display:block; width:75%;" src="/static/img/site/elChubra-min.jpg"/>
 
     <br>
     <button class="accordionClose accordion-action">X</button>
@@ -77,7 +77,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-19.17</p>
+      <p >v1-08.12.18-29.50</p>
     </a>
   </footer>
 
