--- a/detail-page/1985-96-engine-torque-specs.html
+++ b/detail-page/1985-96-engine-torque-specs.html
@@ -25,10 +25,10 @@
   <meta name=”description” content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title" content="  Improved Shock Absorbers and Spring Coils On Loyales " />
+  <meta property="og:title" content="  1985-96 Engine Torque Specs " />
   <meta property="og:description" content="   " />
 
-    <meta property="og:image" content="/static/img/guides/ea82suspension.png" />
+    <meta property="og:image" content="/static/img/guides/torque.jpg" />
 
 
 </head>
@@ -57,14 +57,13 @@
 
 
     <section class="details">
-        <h1 class="details-headline">Improved Shock Absorbers and Spring Coils On Loyales</h1>
-         <p class="details-author">by Loyale 2.7 Turbo</p>
-          <a href="https://www.ultimatesubaru.org/forum/topic/106807-improved-shock-absorbers-and-spring-coils-on-loyales/" class="btn grey-background">Link</a>
-          <a href="/static/pdf/ImprovedShockAbsorbersAndSpringCoilsOnLoyales.pdf" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">1985-96 Engine Torque Specs</h1>
+         <p class="details-author">by Brian Bradburn</p>
+          <a href="http://torquespecs.tripod.com/su85-96.htm" class="btn grey-background">Link</a>
 
         <div class="details-content">
-            <img  src="/static/img/guides/ea82suspension.png">
-          <p>Most of these cars still have their original shock absorbers and springs. Loyale 2.7 Turbo has done the hard work of hunting down springs and struts that are often cheaper and easier to find than OEM Subaru replacements.</p>
+            <img  src="/static/img/guides/torque.jpg">
+          <p> The original source for this (http://torquespecs.tripod.com/su85-96.htm), as of 8/2018 is akin to malware. The ads bring back to the early 2000s in all of the worst ways, just use the PDFs I made and save yourself the aggravation.</p><section class="list"> <table id="listView"> <tr> <th>Engine</th> <th>Archive</th> </tr><tr> <td>1.2L Engine</td><td> <a href="/static/pdf/1.2L Engine.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>1.6L Engines</td><td> <a href="/static/pdf/1.6L Engines.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>1.8L (1820cc) Engine</td><td> <a href="/static/pdf/1.8L (1820cc) Engine.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>1.8L(1781cc) Engine</td><td> <a href="/static/pdf/1.8L(1781cc) Engine.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>2.2L Engine</td><td> <a href="/static/pdf/2.2L Engine.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>85-93 3.3L Engine</td><td> <a href="/static/pdf/85-93 3.3L Engine.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>85-96 2.5L Engine</td><td> <a href="/static/pdf/85-96 2.5L Engine.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>85-96 2.7L Engine</td><td> <a href="/static/pdf/85-96 2.7L Engine.pdf" class="btn grey-background">PDF</a></td></tr></table> </section>
         </div>
     </section>
 
