--- a/index.html
+++ b/index.html
@@ -182,21 +182,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="7" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
-
-              <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <a href="./detail-page/dashboard-removal.html"> <div class="item-content">
-                <div class="card-title">Dashboard Removal</div>
-                <div class="card-description">&amp; LED retrofitting</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="8" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
+          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="7" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -204,6 +190,20 @@
                 <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
                 <div class="card-title">Rear e-Brake Retrofit </div>
                 <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="8" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
+
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <a href="./detail-page/dashboard-removal.html"> <div class="item-content">
+                <div class="card-title">Dashboard Removal</div>
+                <div class="card-description">&amp; LED retrofitting</div>
                 </a>
                 </div>
               </div>
@@ -224,13 +224,13 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="10" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-id="10" data-category="generic build" data-description="" data-title="1985-96 Engine Torque Specs">
 
               <div class="card">
-                <div class="card-id">ej22</div>
-                <div class="card-author"></div>
-                <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
-                <div class="card-title">End Wrench: EJ22 Overhaul</div>
+                <div class="card-id">generic build</div>
+                <div class="card-author">Brian Bradburn</div>
+                <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
+                <div class="card-title">1985-96 Engine Torque Specs</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -238,14 +238,14 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="11" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
+          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="11" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
 
               <div class="card">
-                <div class="card-id">generic build</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <a href="./detail-page/fuel-injector-cleaning.html"> <div class="item-content">
-                <div class="card-title">Fuel Injector Cleaning</div>
-                <div class="card-description">scrub a dub dub</div>
+                <div class="card-id">ej22</div>
+                <div class="card-author"></div>
+                <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
+                <div class="card-title">End Wrench: EJ22 Overhaul</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -280,7 +280,21 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="14" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="14" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
+
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <a href="./detail-page/fuel-injector-cleaning.html"> <div class="item-content">
+                <div class="card-title">Fuel Injector Cleaning</div>
+                <div class="card-description">scrub a dub dub</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="15" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -294,7 +308,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="15" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="16" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -308,7 +322,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="16" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="17" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -316,20 +330,6 @@
                 <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
                 <div class="card-title">Cooler Thermoswitch</div>
                 <div class="card-description">Get your electric fan to switch on at a lower temp</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="17" data-category="generic build" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
-
-              <div class="card">
-                <div class="card-id">generic build</div>
-                <div class="card-author">Marc Googer</div>
-                <a href="./detail-page/chopsaw-tube-notching.html"> <div class="item-content">
-                <div class="card-title">Chopsaw Tube Notching</div>
-                <div class="card-description">BillaVista Offroad Tech</div>
                 </a>
                 </div>
               </div>
@@ -350,7 +350,21 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="19" data-category="ea82" data-description="" data-title="Weber Conversion">
+          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="19" data-category="generic build" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
+
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">Marc Googer</div>
+                <a href="./detail-page/chopsaw-tube-notching.html"> <div class="item-content">
+                <div class="card-title">Chopsaw Tube Notching</div>
+                <div class="card-description">BillaVista Offroad Tech</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="20" data-category="ea82" data-description="" data-title="Weber Conversion">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -379,7 +393,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-29.50</p>
+      <p >v1-08.12.18-58.33</p>
     </a>
   </footer>
 
