--- a/list.html
+++ b/list.html
@@ -128,16 +128,6 @@
         <td>  <a href="/static/pdf/numbchux-EA82toEj22Swap.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>Dashboard Removal</td>
-        <td>
-            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
-        Loyale 2.7 Turbo
-            </a>
-      </td>
-        <td> <a href="https://www.ultimatesubaru.org/forum/topic/131336-led-retrofitting-on-instrument-cluster-~-dashboard-removal-procedures/" class="btn grey-background">Link</a>  </td>
-        <td>  <a href="/static/pdf/led-retrofitting-on-instrument-cluster-~-dashboard-removal-procedures.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
         <td>Rear e-Brake Retrofit </td>
         <td>
             <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
@@ -146,6 +136,16 @@
       </td>
         <td> <a href="https://www.ultimatesubaru.org/forum/topic/129779-the-definitive-rear-e-brake-retrofit-solution/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/the-definitive-rear-e-brake-retrofit-solution.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>Dashboard Removal</td>
+        <td>
+            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
+        Loyale 2.7 Turbo
+            </a>
+      </td>
+        <td> <a href="https://www.ultimatesubaru.org/forum/topic/131336-led-retrofitting-on-instrument-cluster-~-dashboard-removal-procedures/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/led-retrofitting-on-instrument-cluster-~-dashboard-removal-procedures.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>Improved Shock Absorbers and Spring Coils On Loyales</td>
@@ -158,22 +158,20 @@
         <td>  <a href="/static/pdf/ImprovedShockAbsorbersAndSpringCoilsOnLoyales.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
+        <td>1985-96 Engine Torque Specs</td>
+        <td>
+        Brian Bradburn
+      </td>
+        <td> <a href="http://torquespecs.tripod.com/su85-96.htm" class="btn grey-background">Link</a>  </td>
+        <td>  </td>
+      </tr>
+      <tr>
         <td>End Wrench: EJ22 Overhaul</td>
         <td>
         
       </td>
         <td>  </td>
         <td>  <a href="/static/pdf/EJ22-Overhaul.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
-        <td>Fuel Injector Cleaning</td>
-        <td>
-            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
-        Loyale 2.7 Turbo
-            </a>
-      </td>
-        <td> <a href="https://www.ultimatesubaru.org/forum/topic/151458-easy-fuel-injector-cleansing-procedures/" class="btn grey-background">Link</a>  </td>
-        <td>  <a href="/static/pdf/easy-fuel-injector-cleansing-procedures.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>DIY Head Porting</td>
@@ -192,6 +190,16 @@
       </td>
         <td> <a href="https://www.ultimatesubaru.org/forum/topic/129601-how-to-easily-test-an-ignition-module/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/how-to-easily-test-an-ignition-module.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>Fuel Injector Cleaning</td>
+        <td>
+            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
+        Loyale 2.7 Turbo
+            </a>
+      </td>
+        <td> <a href="https://www.ultimatesubaru.org/forum/topic/151458-easy-fuel-injector-cleansing-procedures/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/easy-fuel-injector-cleansing-procedures.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>How To Keep Your Subaru Alive</td>
@@ -220,20 +228,20 @@
         <td>  <a href="/static/pdf//static/pdf/cooler-temp-thermoswitch.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>Chopsaw Tube Notching</td>
-        <td>
-        Marc Googer
-      </td>
-        <td> <a href="https://www.pirate4x4.com/tech/billavista/Links/" class="btn grey-background">Link</a>  </td>
-        <td>  <a href="/static/pdf/techbillavistatubenotching.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
         <td>DIY Fender Cutting &amp; Rolling</td>
         <td>
         
       </td>
         <td> <a href="https://www.pirate4x4.com/forum/ford/824933-tips-fender-cutting.html" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/tips-fender-cutting.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>Chopsaw Tube Notching</td>
+        <td>
+        Marc Googer
+      </td>
+        <td> <a href="https://www.pirate4x4.com/tech/billavista/Links/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/techbillavistatubenotching.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>Weber Conversion</td>
@@ -258,7 +266,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-29.50</p>
+      <p >v1-08.12.18-58.33</p>
     </a>
   </footer>
 
