--- a/detail-page/ignition-module-testing.html
+++ b/detail-page/ignition-module-testing.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <a href="/index.html">
+  <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -60,10 +60,10 @@
         <h1 class="details-headline">Ignition Module Testing</h1>
          <p class="details-author">by Loyale 2.7 Turbo</p>
           <a href="https://www.ultimatesubaru.org/forum/topic/129601-how-to-easily-test-an-ignition-module/" class="btn grey-background">Link</a>
-          <a href="/static/pdf/how-to-easily-test-an-ignition-module.pdf" class="btn grey-background">PDF Archive</a>
+          <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/pdf/how-to-easily-test-an-ignition-module.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-            <img  src="/static/img/guides/IgnitionModuleTest.jpg">
+            <img  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/IgnitionModuleTest.jpg">
           <p>The Ignition Module is the Electronic Part that Substituted the Points inside the Distribuitor; it usually consist in two parts: One Pick up the Signal and the other sends the Pulses to the Ignition Coil.<p><p>This Test was Done with the Nippon Denso Distribuitor, from a Carburated EA82 Subaru Engine, from the 2WD version; but this test is pretty Standard.</p>
         </div>
     </section>
@@ -78,7 +78,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-14.49</p>
+      <p >v1-08.12.18-33.02</p>
     </a>
   </footer>
 
@@ -86,8 +86,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="/scripts/script.js"></script>
-  <script src="/scripts/accordion.js"></script>
+  <script src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/scripts/script.js"></script>
+  <script src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/scripts/accordion.js"></script>
 
 </body>
 
