--- a/detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html
+++ b/detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <a href="/index.html">
+  <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -60,10 +60,10 @@
         <h1 class="details-headline">Improved Shock Absorbers and Spring Coils On Loyales</h1>
          <p class="details-author">by Loyale 2.7 Turbo</p>
           <a href="https://www.ultimatesubaru.org/forum/topic/106807-improved-shock-absorbers-and-spring-coils-on-loyales/" class="btn grey-background">Link</a>
-          <a href="/static/pdf/ImprovedShockAbsorbersAndSpringCoilsOnLoyales.pdf" class="btn grey-background">PDF Archive</a>
+          <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/pdf/ImprovedShockAbsorbersAndSpringCoilsOnLoyales.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-            <img  src="/static/img/guides/ea82suspension.png">
+            <img  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/ea82suspension.png">
           <p>Most of these cars still have their original shock absorbers and springs. Loyale 2.7 Turbo has done the hard work of hunting down springs and struts that are often cheaper and easier to find than OEM Subaru replacements.</p>
         </div>
     </section>
@@ -78,7 +78,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-14.49</p>
+      <p >v1-08.12.18-33.02</p>
     </a>
   </footer>
 
@@ -86,8 +86,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="/scripts/script.js"></script>
-  <script src="/scripts/accordion.js"></script>
+  <script src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/scripts/script.js"></script>
+  <script src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/scripts/accordion.js"></script>
 
 </body>
 
