less broken - root was local

--- a/detail-page/1985-96-engine-torque-specs.html
+++ b/detail-page/1985-96-engine-torque-specs.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/index.html">
+  <a href="/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -62,7 +62,7 @@
           <a href="http://torquespecs.tripod.com/su85-96.htm" class="btn grey-background">Link</a>
 
         <div class="details-content">
-            <img  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/torque.jpg">
+            <img  src="/static/img/guides/torque.jpg">
           <p> The original source for this (http://torquespecs.tripod.com/su85-96.htm), as of 8/2018 is akin to malware. The ads bring me back to the early 2000s in all of the worst ways, just use the PDFs I made and save yourself the aggravation. Some images were missing when I archived the pages.</p><section class="list"> <table id="listView"> <tr> <th>Engine</th> <th>Archive</th> </tr><tr> <td>1.2L Engine</td><td> <a href="/static/pdf/torque-spec/1.2LEngine.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>1.6L Engines</td><td> <a href="/static/pdf/torque-spec/1.6LEngines.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>1.8L (1820cc) Engine</td><td> <a href="/static/pdf/torque-spec/1.8L (1820cc) Engine.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>1.8L(1781cc) Engine</td><td> <a href="/static/pdf/torque-spec/1.8L(1781cc)Engine.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>2.2L Engine</td><td> <a href="/static/pdf/torque-spec/2.2LEngine.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>85-93 3.3L Engine</td><td> <a href="/static/pdf/torque-spec/85-933.3LEngine.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>85-96 2.5L Engine</td><td> <a href="/static/pdf/torque-spec/85-96 2.5L Engine.pdf" class="btn grey-background">PDF</a></td></tr><tr> <td>85-96 2.7L Engine</td><td> <a href="/static/pdf/torque-spec/85-962.7LEngine.pdf" class="btn grey-background">PDF</a></td></tr></table> </section>
         </div>
     </section>
@@ -77,7 +77,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-33.02</p>
+      <p >v1-08.12.18-36.43</p>
     </a>
   </footer>
 
@@ -85,8 +85,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/scripts/script.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/scripts/accordion.js"></script>
+  <script src="/scripts/script.js"></script>
+  <script src="/scripts/accordion.js"></script>
 
 </body>
 
