--- a/detail-page/diy-fender-cutting-rolling.html
+++ b/detail-page/diy-fender-cutting-rolling.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/index.html">
+  <a href="/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -60,10 +60,10 @@
         <h1 class="details-headline">DIY Fender Cutting &amp; Rolling</h1>
         
           <a href="https://www.pirate4x4.com/forum/ford/824933-tips-fender-cutting.html" class="btn grey-background">Link</a>
-          <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/pdf/tips-fender-cutting.pdf" class="btn grey-background">PDF Archive</a>
+          <a href="/static/pdf/tips-fender-cutting.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-            <img  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/fenderRolling.jpg">
+            <img  src="/static/img/guides/fenderRolling.jpg">
           <p>This was a great source of inspiration for my own project when I cut and rolled my fenders.</p><p> You need a welder, tin snips, flap sander, a pair of pliers and an hour or two each wheel well to make a uniform lip that looks nearly factory.</p>
         </div>
     </section>
@@ -78,7 +78,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-33.02</p>
+      <p >v1-08.12.18-36.43</p>
     </a>
   </footer>
 
@@ -86,8 +86,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/scripts/script.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/scripts/accordion.js"></script>
+  <script src="/scripts/script.js"></script>
+  <script src="/scripts/accordion.js"></script>
 
 </body>
 
