--- a/detail-page/2nd-gen-forester-snorkle.html
+++ b/detail-page/2nd-gen-forester-snorkle.html
@@ -25,10 +25,10 @@
   <meta name=”description” content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title" content="  How To Keep Your Subaru Alive " />
-  <meta property="og:description" content="  This went out of print a long time ago. Luckily for us Joel Grice digitized it for us! " />
+  <meta property="og:title" content="  2nd Gen Forester Snorkle " />
+  <meta property="og:description" content="   " />
 
-    <meta property="og:image" content="/static/img/guides/howtokeepyoursubaruAlive.png" />
+    <meta property="og:image" content="/static/img/guides/forester-snorkle1.jpg" />
 
 
 </head>
@@ -57,13 +57,17 @@
 
 
     <section class="details">
-        <h1 class="details-headline">How To Keep Your Subaru Alive</h1>
-         <p class="details-author">by Larry Owens</p>
-          <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">2nd Gen Forester Snorkle</h1>
+        
 
         <div class="details-content">
-            <img  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/howtokeepyoursubaruAlive.png">
-          <p>This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</p>
+            <img  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/forester-snorkle1.jpg">
+          <p>
+<a href="https://www.instagram.com/brianlipke">Brian Lipke</a> did this mod on his 2005 Forester with a snorkle kit for a 1997 Toyota Land Cruiser. The process doesn't look too difficult, just take your time measuring. Use tape first to keep the paint fresh and to allow for you to make marks if needed. 
+<img src="../static/img/guides/forester-snorkle2.jpg"/>
+<img src="../static/img/guides/forester-snorkle5.jpg"/><img src="../static/img/guides/forester-snorkle3.jpg"/>
+<img src="../static/img/guides/forester-snorkle4.jpg"/>
+</p>
         </div>
     </section>
 
