--- a/detail-page/advice-for-longer-cv-joints-life.html
+++ b/detail-page/advice-for-longer-cv-joints-life.html
@@ -25,10 +25,10 @@
   <meta name=”description” content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title" content="  How To Keep Your Subaru Alive " />
-  <meta property="og:description" content="  This went out of print a long time ago. Luckily for us Joel Grice digitized it for us! " />
+  <meta property="og:title" content="  Advice for Longer CV Joints Life " />
+  <meta property="og:description" content="   " />
 
-    <meta property="og:image" content="/static/img/guides/howtokeepyoursubaruAlive.png" />
+    <meta property="og:image" content="/static/img/guides/cvgrease.jpg" />
 
 
 </head>
@@ -57,13 +57,14 @@
 
 
     <section class="details">
-        <h1 class="details-headline">How To Keep Your Subaru Alive</h1>
-         <p class="details-author">by Larry Owens</p>
-          <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">Advice for Longer CV Joints Life</h1>
+         <p class="details-author">by Loyale 2.7 Turbo</p>
+          <a href="https://www.ultimatesubaru.org/forum/topic/114267-advice-for-longer-cv-joints-life/" class="btn grey-background">Link</a>
+          <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/pdf/AdviceforLongerCVJointsLife.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-            <img  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/howtokeepyoursubaruAlive.png">
-          <p>This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</p>
+            <img  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/cvgrease.jpg">
+          <p>Loyale 2.7 Turbo contributes a massive amount of write-ups to USMB and has years of experience keeping jalopy subarus running in his home, Honduras. This writeup is general and true for most cars. The most important part is keeping them lubricated with CV joint grease and not lifting farther than their working angle.</p>
         </div>
     </section>
 
