--- a/detail-page/hitachi-carb-rebuild.html
+++ b/detail-page/hitachi-carb-rebuild.html
@@ -25,10 +25,10 @@
   <meta name=”description” content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title" content="  How To Keep Your Subaru Alive " />
-  <meta property="og:description" content="  This went out of print a long time ago. Luckily for us Joel Grice digitized it for us! " />
+  <meta property="og:title" content="  Hitachi Carb Rebuild " />
+  <meta property="og:description" content="   " />
 
-    <meta property="og:image" content="/static/img/guides/howtokeepyoursubaruAlive.png" />
+    <meta property="og:image" content="/static/img/guides/hitachi-rebuild.png" />
 
 
 </head>
@@ -57,13 +57,13 @@
 
 
     <section class="details">
-        <h1 class="details-headline">How To Keep Your Subaru Alive</h1>
-         <p class="details-author">by Larry Owens</p>
-          <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">Hitachi Carb Rebuild</h1>
+        
+          <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/pdf/Hitachicarburetor.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-            <img  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/howtokeepyoursubaruAlive.png">
-          <p>This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</p>
+            <img  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/hitachi-rebuild.png">
+          Original source unknown
         </div>
     </section>
 
