--- a/detail-page/mechanical-conversion-on-hitachi-carbs.html
+++ b/detail-page/mechanical-conversion-on-hitachi-carbs.html
@@ -25,10 +25,10 @@
   <meta name=”description” content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title" content="  How To Keep Your Subaru Alive " />
-  <meta property="og:description" content="  This went out of print a long time ago. Luckily for us Joel Grice digitized it for us! " />
+  <meta property="og:title" content="  Mechanical Conversion on Hitachi Carbs " />
+  <meta property="og:description" content="   " />
 
-    <meta property="og:image" content="/static/img/guides/howtokeepyoursubaruAlive.png" />
+    <meta property="og:image" content="/static/img/guides/hitachiLinkage.gif" />
 
 
 </head>
@@ -57,13 +57,15 @@
 
 
     <section class="details">
-        <h1 class="details-headline">How To Keep Your Subaru Alive</h1>
-         <p class="details-author">by Larry Owens</p>
-          <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">Mechanical Conversion on Hitachi Carbs</h1>
+         <p class="details-author">by Loyale 2.7 Turbo</p>
+          <a href="https://www.ultimatesubaru.org/forum/topic/147163-mechanical-conversion-on-hitachi-carburetors/" class="btn grey-background">Link</a>
+          <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/pdf/Mechanical-Conversion-on-Hitachi-Carburetors.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-            <img  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/howtokeepyoursubaruAlive.png">
-          <p>This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</p>
+            <img style="display:none"  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/hitachiLinkage.gif">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/yaloYDpKeqI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <p>The ea82 Hitachi carbs have a vaccum actuated secondary that kicks on only at full open throttle. Loyale modified his to run off a mechanical linkage like many other carbs do.</p>
         </div>
     </section>
 
